crates/rascal/src/internal/as2_pcode/parser/snapshots/rascal__internal__as2_pcode__parser__tests__printed@function.pcode.snap
---
source: crates/rascal/src/internal/as2_pcode/parser/tests.rs
expression: "parsed.unwrap_or_else(|_| Actions::empty())"
input_file: samples/as2_pcode/function.pcode
---
ConstantPool "Test called!", ":)", "anon", "Anonymous function called!", "a = ", ", b = ", "bb", "aa", "test"
DefineFunction "test", 0 {
Push constant0
Trace
Push constant1
Return
}
Push constant2
DefineFunction2 "", 2, 3, false, false, true, false, true, false, true, false, false, 2, "a", 1, "b" {
Push constant3
Trace
Push constant4, register2
Add2
Push constant5
Add2
Push register1
Add2
Trace
}
DefineLocal
Push constant6, constant7, 2, constant2
CallFunction
Pop
Push 0, constant8
CallFunction
Push 0, constant8
CallFunction
Add2
Trace
DefineFunction "", 0 {
}
Pop
