crates/rascal/src/internal/as2_pcode/parser/snapshots/rascal__internal__as2_pcode__parser__tests__printed@function_hoisting.pcode.snap
---
source: crates/rascal/src/internal/as2_pcode/parser/tests.rs
expression: "parsed.unwrap_or_else(|_| Actions::empty())"
input_file: samples/as2_pcode/function_hoisting.pcode
---
ConstantPool "function within a function!", "first function!", "functionWithinAFunction", "firstVar = ", "firstVar", ", secondVar = ", "secondVar", "second function!", "second function! (but redefined!)", "third function!", "Unused function!", "firstFunction", "secondFunction", "thirdFunction"
DefineFunction "firstFunction", 0 {
DefineFunction "functionWithinAFunction", 0 {
Push constant0
Trace
}
Push constant1
Trace
Push 0
Push constant2
CallFunction
Pop
Push constant3
Push constant4
GetVariable
Add2
Push constant5
Add2
Push constant6
GetVariable
Add2
Trace
}
DefineFunction "secondFunction", 0 {
Push constant7
Trace
Push constant3
Push constant4
GetVariable
Add2
Push constant5
Add2
Push constant6
GetVariable
Add2
Trace
}
DefineFunction "secondFunction", 0 {
Push constant8
Trace
Push constant3
Push constant4
GetVariable
Add2
Push constant5
Add2
Push constant6
GetVariable
Add2
Trace
}
DefineFunction "thirdFunction", 0 {
Push constant9
Trace
}
DefineFunction "unusedFunction", 0 {
Push constant10
Trace
}
Push constant4
Push 1
DefineLocal
Push 0
Push constant11
CallFunction
Pop
Push 0
Push constant12
CallFunction
Pop
Push constant6
Push 2
DefineLocal
Push 0
Push constant11
CallFunction
Pop
Push 0
Push constant12
CallFunction
Pop
Push 0
Push constant11
CallFunction
Pop
Push 0
Push constant12
CallFunction
Pop
Push 0
Push constant11
CallFunction
Pop
Push 0
Push constant12
CallFunction
Pop
Push 0
Push constant2
CallFunction
Pop
Push 0
Push constant13
CallFunction
Pop
