crates/rascal/src/internal/as2_pcode/parser/snapshots/rascal__internal__as2_pcode__parser__tests__printed@import_affects_functions.pcode.snap
---
source: crates/rascal/src/internal/as2_pcode/parser/tests.rs
expression: "parsed.unwrap_or_else(|_| Actions::empty())"
input_file: samples/as2_pcode/import_affects_functions.pcode
---
ConstantPool "BitmapData", "flash", "display", "beforeImport", "afterImport"
DefineFunction "beforeImport", 0 {
Push constant0
GetVariable
Trace
}
DefineFunction "afterImport", 0 {
Push constant1
GetVariable
Push constant2
GetMember
Push constant0
GetMember
Trace
}
Push 0, constant3
CallFunction
Pop
Push 0, constant4
CallFunction
Pop
