crates/rascal/src/internal/as2_pcode/parser/snapshots/rascal__internal__as2_pcode__parser__tests__printed@legacy_get_set.pcode.snap
---
source: crates/rascal/src/internal/as2_pcode/parser/tests.rs
expression: "parsed.unwrap_or_else(|_| Actions::empty())"
input_file: samples/as2_pcode/legacy_get_set.pcode
---
ConstantPool "y", "x", "get(\"x\"): ", "get(x): ", "set(x, 15);", "x = ", "y = "
Push constant0
Push 5
DefineLocal
Push constant1
Push constant0
DefineLocal
Push constant2
Push constant1
GetVariable
Add2
Trace
Push constant3
Push constant1
GetVariable
GetVariable
Add2
Trace
Push constant4
Trace
Push constant1
GetVariable
Push 15
SetVariable
Push constant5
Push constant1
GetVariable
Add2
Trace
Push constant6
Push constant0
GetVariable
Add2
Trace
